[gd_scene load_steps=13 format=3 uid="uid://dsu47wmi2sb5n"]

[ext_resource type="Script" path="res://byggare.gd" id="1_frwt1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_riomn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yv5el"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gulf5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_proux"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2d8fe"]

[sub_resource type="ImageTexture" id="ImageTexture_pmlfn"]

[sub_resource type="ImageTexture" id="ImageTexture_786g4"]

[sub_resource type="ImageTexture" id="ImageTexture_myyvn"]

[sub_resource type="ImageTexture" id="ImageTexture_tmagq"]

[sub_resource type="ImageTexture" id="ImageTexture_wl4io"]

[sub_resource type="ButtonGroup" id="ButtonGroup_wboq2"]

[node name="Byggare" type="Control"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource("1_frwt1")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(110, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = -74.0
offset_right = 110.0
offset_bottom = -44.0
grow_vertical = 2
color = Color(1, 1, 1, 0.431373)

[node name="Gubbar" type="Panel" parent="ColorRect"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 105.0
offset_bottom = 45.0

[node name="Label" type="Label" parent="ColorRect/Gubbar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -11.5
offset_right = 92.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Units"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GubbarButton" type="Button" parent="ColorRect/Gubbar"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_riomn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yv5el")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gulf5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_proux")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2d8fe")

[node name="Pruducton" type="Panel" parent="ColorRect"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
offset_left = 5.0
offset_top = 50.0
offset_right = 105.0
offset_bottom = 90.0

[node name="PruductonCheckButton" type="CheckButton" parent="ColorRect/Pruducton"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0
theme_override_icons/checked = SubResource("ImageTexture_pmlfn")
theme_override_icons/checked_disabled = SubResource("ImageTexture_786g4")
theme_override_icons/unchecked = SubResource("ImageTexture_myyvn")
theme_override_icons/unchecked_disabled = SubResource("ImageTexture_tmagq")
theme_override_icons/checked_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/checked_disabled_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/unchecked_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/unchecked_disabled_mirrored = SubResource("ImageTexture_wl4io")
button_group = SubResource("ButtonGroup_wboq2")

[node name="Label" type="Label" parent="ColorRect/Pruducton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -11.5
offset_right = 92.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Pruduction"
horizontal_alignment = 1
vertical_alignment = 1

[node name="försvar" type="Panel" parent="ColorRect"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
offset_left = 5.0
offset_top = 95.0
offset_right = 105.0
offset_bottom = 135.0

[node name="försvarCheckButton" type="CheckButton" parent="ColorRect/försvar"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0
theme_override_icons/checked = SubResource("ImageTexture_pmlfn")
theme_override_icons/checked_disabled = SubResource("ImageTexture_786g4")
theme_override_icons/unchecked = SubResource("ImageTexture_myyvn")
theme_override_icons/unchecked_disabled = SubResource("ImageTexture_tmagq")
theme_override_icons/checked_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/checked_disabled_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/unchecked_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/unchecked_disabled_mirrored = SubResource("ImageTexture_wl4io")
button_group = SubResource("ButtonGroup_wboq2")

[node name="Label" type="Label" parent="ColorRect/försvar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -11.5
offset_right = 92.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Defence"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hastighet" type="Panel" parent="ColorRect"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
offset_left = 5.0
offset_top = 140.0
offset_right = 105.0
offset_bottom = 180.0

[node name="hastighetCheckButton" type="CheckButton" parent="ColorRect/hastighet"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0
theme_override_icons/checked = SubResource("ImageTexture_pmlfn")
theme_override_icons/checked_disabled = SubResource("ImageTexture_786g4")
theme_override_icons/unchecked = SubResource("ImageTexture_myyvn")
theme_override_icons/unchecked_disabled = SubResource("ImageTexture_tmagq")
theme_override_icons/checked_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/checked_disabled_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/unchecked_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/unchecked_disabled_mirrored = SubResource("ImageTexture_wl4io")
button_group = SubResource("ButtonGroup_wboq2")

[node name="Label" type="Label" parent="ColorRect/hastighet"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -11.5
offset_right = 92.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Speed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="ColorRect"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
offset_left = 5.0
offset_top = 185.0
offset_right = 105.0
offset_bottom = 225.0

[node name="CheckButton" type="CheckButton" parent="ColorRect/Panel"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0
theme_override_icons/checked = SubResource("ImageTexture_pmlfn")
theme_override_icons/checked_disabled = SubResource("ImageTexture_786g4")
theme_override_icons/unchecked = SubResource("ImageTexture_myyvn")
theme_override_icons/unchecked_disabled = SubResource("ImageTexture_tmagq")
theme_override_icons/checked_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/checked_disabled_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/unchecked_mirrored = SubResource("ImageTexture_wl4io")
theme_override_icons/unchecked_disabled_mirrored = SubResource("ImageTexture_wl4io")
button_pressed = true
button_group = SubResource("ButtonGroup_wboq2")

[node name="Label" type="Label" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -11.5
offset_right = 92.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ColorRect/Gubbar/GubbarButton" to="." method="_on_gubbar_button_pressed"]
[connection signal="pressed" from="ColorRect/Pruducton/PruductonCheckButton" to="." method="_on_pruducton_check_button_pressed"]
[connection signal="pressed" from="ColorRect/försvar/försvarCheckButton" to="." method="_on_frsvar_check_button_pressed"]
[connection signal="pressed" from="ColorRect/hastighet/hastighetCheckButton" to="." method="_on_hastighet_check_button_pressed"]
[connection signal="pressed" from="ColorRect/Panel/CheckButton" to="." method="_on_check_button_pressed"]
